# ImageSearch

./: .gitignore  Makefile  README.md  docker-compose.yaml  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt  setup.py
backend/dev/: docker-compose.yaml
backend/image_search/: __init__.py  auth.py  logs.py  object_storage.py  upsert_user.py
backend/image_search/db/: __init__.py  image_links.py  image_storage.py  images.py  mongo.py  users.py  utils.py
backend/image_search/jobs/: __init__.py  clean_image_links.py  job.py
backend/image_search/models/: api_response.py  config.py  cv.py  image.py  image_storage.py  media.py  user.py
backend/image_search/routes/: __init__.py
backend/image_search/routes/api/: image.py  media.py  models.py  search.py  user.py
dev/: docker-compose.yaml
dev/nginx/: nginx.conf.template
frontend/: .env.production  Dockerfile  package-lock.json  package.json
frontend/html/: index.html
frontend/html/js/: image_search.js
frontend/nginx/: nginx.conf.template
frontend/public/: index.html
frontend/src/: App.vue  router.ts
frontend/src/api/: api.ts  images.ts  media.ts  token.ts  users.ts
frontend/src/components/: Header.vue  ImageCard.vue  NewImage.vue  PageFooter.vue  PageHeader.vue  SearchBar.vue
frontend/src/views/: LoginPage.vue  Main.vue  MainPage.vue
scripts/: mongo-init.js
