[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image-search"
dynamic = ["version"]
description = "Backend for ImageSearch application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "isthisloss", email = "kopturovdim@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "aioboto3==15.1.0",
  "bcrypt==4.0.1",
  "dacite==1.9.2",
  "fastapi==0.116.1",
  "imutils==0.5.4",
  "motor==3.7.1",
  "numpy==2.2.6",
  "opencv-python==4.12.0.88",
  "passlib==1.7.4",
  "pydantic-settings==2.10.1",
  "pytesseract==0.3.13",
  "python-dotenv==1.1.1",
  "python-jose==3.5.0",
  "python-multipart==0.0.20",
  "uvicorn==0.35.0",
]

[tool.hatch.version]
path = "image_search/__init__.py"

[project.optional-dependencies]
dev = [
  "pip-tools==7.5.0",
]

[tool.hatch.build]
include = [
  "image_search/**/*.py",
]
